--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/material-top-tabs": "^6.2.4",
     "@react-navigation/native-stack": "^6.9.0",
     "axios": "^0.27.2",
     "expo": "~46.0.13",
@@ -19,7 +20,9 @@
     "react-native": "0.69.6",
     "react-native-navigation-container": "^1.0.6",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-svg": "12.3.0"
+    "react-native-svg": "12.3.0",
+    "react-native-tab-view": "^3.2.1",
+    "react-native-pager-view": "5.4.24"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
